Bug 1413361: EnsureFrameForTextNode shouldn't reconstruct synchronously without up-to-date styles. r=bz

MozReview-Commit-ID: IzpcdCdcPjr